[package]
name = "nes_rs"
version = "0.1.0"
authors = ["nathan"]
edition = "2018"
resolver = "2"

[profile.release] 
debug = true


[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
byteorder = "1.4.3"
winit = "0.26.1"
winit_input_helper = "0.12.0"
pixels = "0.9.0"
rgb = "0.8.27"
clap = "3.1.18"
read_input = "0.8.6"
ctrlc = "3.2.0"