[package]
name = "nes_rs"
version = "0.1.0"
authors = ["nathan"]
edition = "2018"
resolver = "2"

[profile.release] 
debug = true


[dependencies]
log = "0.4.14"
env_logger = "0.11.2"
byteorder = "1.4.3"
winit = { version = "0.29.9", features = ["rwh_05"]}
winit_input_helper = "0.15.2"
pixels = "0.13.0"
rgb = "0.8.27"
clap = "4.4.16"
read_input = "0.8.6"
ctrlc = "3.2.0"